# EmergencyBackup

./: .gitignore  Cargo.toml  README.md  cpu_logfile.txt
images/: draw_gifs.py
src/: configuration.rs  configuration_gui.rs  confirmation_gui.rs  cpu_log.rs  external_device.rs  file.rs  installation.rs  main.rs  pattern_recognition.rs  sounds.rs
