[package]
name = "EmergencyBackup"
version = "0.1.0"
edition = "2021"

[dependencies]
mouse_position = "0.1.4"
rand = "0.9.0-alpha.1"
guessture = "0.1.0"
plotters = "0.3.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
egui = "0.28.1"
eframe = "0.28.1"
serial_test = "3.1.1"