[package]
name = "EmergencyBackup"
version = "0.1.0"
edition = "2021"

[dependencies]
mouse_position = "0.1.4"
guessture = "0.1.0"
plotters = "0.3.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
serial_test = "3.1.1"
num_cpus = "1.16.0"
sysinfo = "0.31.2"
auto-launch = "0.5.0"
chrono = "0.4.38"
image = { version = "0.25.2", features = ["jpeg", "png", "gif"] }
dirs = "5.0.1"
rusb = "0.9"
cfg-if = "1.0"
rodio = "0.19.0"
